# swc_usb

./: LICENSE  readme.md  requirements.txt  swc_usb.hex  swc_usb.py
firmware/: CMakeLists.txt  makefile  swc_usb.c  swc_usb.h
pcb/: swc_usb.brd  swc_usb.sch
